Continued to work on Jedis. Bounty whitelist will now be disabled by default when generating a new config Disabling bounty whitelists will now allow anyone to claim previously whitelisted bounties Some challenges will not be shown if their features are disabled